messaging_app/messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-service
  namespace: messaging-app
  annotations:
    # Add any service annotations here
spec:
  selector:
    app: django-messaging
    version: blue  # Initially pointing to blue version
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  type: ClusterIP
---
# Service for green deployment (for testing)
apiVersion: v1
kind: Service
metadata:
  name: green-service
  namespace: messaging-app
spec:
  selector:
    app: django-messaging
    version: green
  ports:
  - port: 8001
    targetPort: 8000
    protocol: TCP
    name: http
  type: ClusterIP
---
# Service for blue deployment (for testing)
apiVersion: v1
kind: Service
metadata:
  name: blue-service
  namespace: messaging-app
spec:
  selector:
    app: django-messaging
    version: blue
  ports:
  - port: 8002
    targetPort: 8000
    protocol: TCP
    name: http
  type: ClusterIP
